--- a/src/components/Dashboards/AdminDashboard.css
+++ b/src/components/Dashboards/AdminDashboard.css
@@ -521,3 +521,23 @@
 .AdminDashboard .apply-btn-replenish:hover {
   background: #a27d03;
 }
+
+.AdminDashboard .apply-btn-replenish_practo {
+  display: inline-flex;
+  align-items: center;
+  padding: 0.5rem 1rem;
+  border-radius: 0.375rem;
+  font-weight: 500;
+  cursor: pointer;
+  transition: all 0.2s;
+  border: none;
+}
+
+.AdminDashboard .apply-btn-replenish_practo{
+  background: #2563EB;
+  color: white;
+}
+
+.AdminDashboard .apply-btn-replenish_practo:hover {
+  background: #1D4ED8;
+}
