--- a/src/components/Dashboards/Ayushpayhealth/Ayushpay.css
+++ b/src/components/Dashboards/Ayushpayhealth/Ayushpay.css
@@ -9,6 +9,15 @@
   margin-top: 70px;
 
 }
+.ayush-main-content-customer {
+  padding: 2rem;
+  max-width: 1280px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+
+
+}
 
 .ayush-page-container {
   min-height: 100vh;
